# spd

./: .gitignore
intro/: CMakeLists.txt
intro/output/: intro
lab1/: CMakeLists.txt  main.cpp
lab1/include/: Algorithms.h  Comparators.h  Job.h  Structs.h  Utilities.h
lab1/output/: main
lab1/src/: Algorithms.cpp  Comparators.cpp  Utilities.cpp  main.cpp  main_do_testow.cpp
lab2/: CMakeLists.txt
lab2/include/: Algorithms.h  Comparators.h  Structs.h  Utilities.h
lab2/src/: Algorithms.cpp  Comparators.cpp  Utilities.cpp  main.cpp
lab3/: CMakeLists.txt
lab3/include/: Algorithms.h  Structs.h  Utilities.h
lab3/src/: Algorithms.cpp  Utilities.cpp  main.cpp
